# historia

./: .flake8  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
content/: Dockerfile
content/core/: blocks.py  fields.py  models.py  tags.py
content/core/migrations/: 0001_initial.py  0002_create_web_site.py  0003_website_featured_image_website_heading_website_intro_and_more.py  0004_licensesnippet.py
content/standardpage/: models.py
content/standardpage/migrations/: 0001_initial.py  0002_standardpage_license.py
docs/: Extending_information_models.md  Update_docker_image.md
settings/: base.py  dev.py  storage.py  urls.py  wsgi.py
templates/: base.html
templates/includes/: footer_inline_script.html
templates/patterns/atoms/buttons/: lightswitch.html
templates/patterns/atoms/icons/: LICENSE.md
templates/patterns/atoms/license/: credit.html  license.html
templates/patterns/blocks/: blockquote_block.html  default_block.html  image_block.html  pullquote_block.html  text_block.html
templates/patterns/molecules/media/: image.html
templates/patterns/molecules/navigation/: linklist.html
templates/patterns/molecules/quotes/: blockquote.html  pullquote.html
templates/patterns/organisms/footer/: footer.html
templates/patterns/organisms/header/: header.html
templates/patterns/pages/: standard_page.html  web_site.html
